# cmor-438-fall

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
examples/: README.md
examples/Supervised_Learning/: README.md
examples/Supervised_Learning/Decision_Trees/: Decision_Trees.ipynb  README.md
examples/Supervised_Learning/Ensemble_Methods/: Ensemble_Methods.ipynb  README.md
examples/Supervised_Learning/KNN/: KNN.ipynb  README.md
examples/Supervised_Learning/Linear_Regression/: Linear_Regression.ipynb  README.md
examples/Unsupervised_Learning/: README.md
src/: README.md  __init__.py
src/helpers/: README.md  __init__.py  postprocess.py  preprocess.py
src/rice2025/: __init__.py  knn.py  metrics.py
src/rice_ml/: README.md  __init__.py
src/supervised_learning/: __init__.py  knn.py  linear_regression.py
src/utilities/: __init__.py  _validation.py  metrics.py  postprocess.py  preprocess.py
test/: README.md
test/integration/: test_knn_e2e.py
test/unit/: test_knn.py  test_metrics.py  test_postprocess.py  test_preprocess.py
tests/: README.md  test_ensemble_methods.py
tests/integration/: README.md  test_api_consistency.py  test_clustering_workflows.py  test_community_detection_pipeline.py  test_determinism_reproducability.py  test_error_path_integration.py  test_linear_regression_pipeline.py  test_pca_component_behavior.py  test_pca_then_classifier.py  test_tree_and_ensemble_pipeline.py
tests/unit/: README.md  test_knn.py  test_logistic_regression.py
(+69 files in other folders)
