[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rice_ml"
version = "0.1.0"
description = "An end-to-end package that contains multiple supervised and unsupervised machine learning algorithms."
authors = [{ name = "Evan C. Brown", email="ecb10@rice.edu"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "seaborn", "pandas", "requests", "typing", "pytest"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
testpaths = ["tests"]
pythonpath = [
    "src"
]